[tool.poetry]
name = "openbb-cli"
version = "1.0.4"
description = "Investment Research for Everyone, Anywhere."
authors = ["OpenBB <hello@openbb.co>"]
packages = [{ include = "openbb_cli" }]
license = "AGPL-3.0-only"
readme = "README.md"
homepage = "https://openbb.co"
repository = "https://github.com/OpenBB-finance/OpenBBTerminal"
documentation = "https://docs.openbb.co/terminal"

[tool.poetry.scripts]
openbb = 'openbb_cli.cli:main'

[tool.poetry.dependencies]
python = "^3.8.1,<3.12"

# OpenBB dependencies
openbb = { version = "^4.2.3", extras = ["all"] }

# CLI dependencies
prompt-toolkit = "^3.0.16"
rich = "^13"
python-dotenv = "^1.0.0"
openpyxl = "^3.1.2"

[build-system]
requires = ["setuptools<65.5.0", "poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
