[tool.poetry]
name = "openbb-cli"
version = "1.1.5"
description = "Investment Research for Everyone, Anywhere."
authors = ["OpenBB <hello@openbb.co>"]
packages = [{ include = "openbb_cli" }]
license = "AGPL-3.0-only"
readme = "README.md"
homepage = "https://openbb.co"
repository = "https://github.com/OpenBB-finance/OpenBB"
documentation = "https://docs.openbb.co/cli"

[tool.poetry.scripts]
openbb = 'openbb_cli.cli:main'

[tool.poetry.dependencies]
python = "^3.9,<3.13"

# OpenBB dependencies
openbb = { version = "^4.3.5", extras = ["all"] }

# CLI dependencies
prompt-toolkit = "^3.0.16"
rich = "^13"
python-dotenv = "^1.0.0"
openpyxl = "^3.1.2"
pywry = "^0.6.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
