[tool.poetry]
name = "openbb"
version = "4.3.3"
description = "Investment research for everyone, anywhere."
authors = ["OpenBB Team <hello@openbb.co>"]
license = "AGPL-3.0-only"
readme = "README.md"
packages = [{ include = "openbb" }]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
openbb-core = "^1.3.4"

openbb-benzinga = "^1.3.3"
openbb-bls = "^1.0.1"
openbb-cftc = "^1.0.1"
openbb-econdb = "^1.2.3"
openbb-federal-reserve = "^1.3.3"
openbb-fmp = "^1.3.3"
openbb-fred = "^1.3.3"
openbb-imf = "^1.0.0"
openbb-intrinio = "^1.3.3"
openbb-oecd = "^1.3.3"
openbb-polygon = "^1.3.3"
openbb-sec = "^1.3.3"
openbb-tiingo = "^1.3.3"
openbb-tradingeconomics = "^1.3.3"
openbb-yfinance = "^1.3.4"

openbb-commodity = "^1.2.3"
openbb-crypto = "^1.3.3"
openbb-currency = "^1.3.3"
openbb-derivatives = "^1.3.3"
openbb-economy = "^1.3.3"
openbb-equity = "^1.3.3"
openbb-etf = "^1.3.3"
openbb-fixedincome = "^1.3.3"
openbb-index = "^1.3.3"
openbb-news = "^1.3.3"
openbb-regulators = "^1.3.3"

# Community dependencies
openbb-alpha-vantage = { version = "^1.3.3", optional = true }
openbb-biztoc = { version = "^1.3.3", optional = true }
openbb-cboe = { version = "^1.3.3", optional = true }
openbb-ecb = { version = "^1.3.3", optional = true }
openbb-finra = { version = "^1.3.3", optional = true }
openbb-finviz = { version = "^1.2.3", optional = true }
openbb-government-us = { version = "^1.3.3", optional = true }
openbb-multpl = { version = "^1.0.3", optional = true }
openbb-nasdaq = { version = "^1.3.3", optional = true }
openbb-seeking-alpha = { version = "^1.3.3", optional = true }
openbb-stockgrid = { version = "^1.3.3", optional = true }
openbb-tmx = { version = "^1.2.3", optional = true }
openbb-tradier = { version = "^1.2.3", optional = true }
openbb-wsj = { version = "^1.3.3", optional = true }

openbb-charting = { version = "^2.2.3", optional = true }
openbb-econometrics = { version = "^1.4.3", optional = true }
openbb-quantitative = { version = "^1.3.3", optional = true }
openbb-technical = { version = "^1.3.3", optional = true }

[tool.poetry.extras]
alpha_vantage = ["openbb-alpha-vantage"]
biztoc = ["openbb-biztoc"]
cboe = ["openbb-cboe"]
charting = ["openbb-charting"]
ecb = ["openbb-ecb"]
econometrics = ["openbb-econometrics"]
finra = ["openbb-finra"]
finviz = ["openbb-finviz"]
government_us = ["openbb-government-us"]
nasdaq = ["openbb-nasdaq"]
multpl = ["openbb-multpl"]
quantitative = ["openbb-quantitative"]
seeking_alpha = ["openbb-seeking-alpha"]
stockgrid = ["openbb-stockgrid"]
technical = ["openbb-technical"]
tmx = ["openbb-tmx"]
tradier = ["openbb-tradier"]
wsj = ["openbb-wsj"]


all = [
    "openbb-alpha-vantage",
    "openbb-biztoc",
    "openbb-cboe",
    "openbb-charting",
    "openbb-ecb",
    "openbb-econometrics",
    "openbb-finra",
    "openbb-finviz",
    "openbb-government-us",
    "openbb-multpl",
    "openbb-nasdaq",
    "openbb-quantitative",
    "openbb-seeking-alpha",
    "openbb-stockgrid",
    "openbb-technical",
    "openbb-tmx",
    "openbb-tradier",
    "openbb-wsj",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
