[tool.poetry]
name = "openbb-sdk"
version = "4.0.0rc13"
description = "OpenBB"
authors = ["OpenBB Team <hello@openbb.co>"]
readme = "README.md"
packages = [{ include = "openbb" }]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
openbb-core = {version = "^0.1.0a1", source = "test-pypi"}

openbb-benzinga = {version = "^0.1.0a1", source = "test-pypi"}
openbb-fmp = {version = "^0.1.0a1", source = "test-pypi"}
openbb-fred = {version = "^0.1.0a0", source = "test-pypi"}
openbb-intrinio = {version = "^0.1.0a0", source = "test-pypi"}
openbb-polygon = {version = "^0.1.0a0", source = "test-pypi"}

openbb-crypto = {version = "^0.1.0a0", source = "test-pypi"}
openbb-economy = {version = "^0.1.0a0", source = "test-pypi"}
openbb-forex = {version = "^0.1.0a0", source = "test-pypi"}
openbb-fixedincome = {version = "^0.1.0a0", source = "test-pypi"}
openbb-news = {version = "^0.1.0a0", source = "test-pypi"}
openbb-stocks = {version = "^0.1.0a1", source = "test-pypi"}

# Community dependencies
openbb-alpha-vantage = { version = "^0.1.0a0", source = "test-pypi", optional = true }
openbb-cboe = { version = "^0.1.0a0", source = "test-pypi", optional = true }
openbb-quandl = { version = "^0.1.0a0", source = "test-pypi", optional = true }
openbb-yfinance = { version = "^0.1.0a0", source = "test-pypi", optional = true }

openbb-charting = { version = "^0.1.0a0", source = "test-pypi", optional = true }
openbb-futures ={ version = "^0.1.0a0", source = "test-pypi", optional = true }
openbb-qa = { version = "^0.1.0a0", source = "test-pypi", optional = true }
openbb-ta = { version = "^0.1.0a0", source = "test-pypi", optional = true }

[tool.poetry.extras]
alpha_vantage = ["openbb-alpha-vantage"]
cboe = ["openbb-cboe"]
quandl = ["openbb-quandl"]
yfinance = ["openbb-yfinance"]
charting = ["openbb-charting"]
futures = ["openbb-futures"]
qa = ["openbb-qa"]
ta = ["openbb-ta"]

all = [
    "openbb-alpha-vantage",
    "openbb-cboe",
    "openbb-quandl",
    "openbb-yfinance",
    "openbb-charting",
    "openbb-futures",
    "openbb-qa",
    "openbb-ta",
]

[tool.poetry.group.dev.dependencies]
pytest = "^6.2.2"


[[tool.poetry.source]]
name = "test-pypi"
url = "https://test.pypi.org/simple/"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
