[tool.poetry]
name = "openbb"
version = "4.0.0a0"
description = "OpenBB"
authors = ["OpenBB Team <hello@openbb.co>"]
readme = "README.md"
packages = [{ include = "openbb" }]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
openbb-core = "^0.1.0a0"

openbb-benzinga = "^0.1.0a0"
openbb-fmp = "^0.1.0a0"
openbb-fred = "^0.1.0a0"
openbb-intrinio = "^0.1.0a0"
openbb-polygon = "^0.1.0a0"

openbb-crypto = "^0.1.0a0"
openbb-economy = "^0.1.0a0"
openbb-forex = "^0.1.0a0"
openbb-fixedincome = "^0.1.0a0"
openbb-news = "^0.1.0a0"
openbb-stocks = "^0.1.0a0"

# Community dependencies
openbb-alpha-vantage = { version="^0.1.0a0", optional=true }
openbb-cboe = { version="^0.1.0a0", optional=true }
openbb-quandl = { version="^0.1.0a0", optional=true }
openbb-yfinance = { version="^0.1.0a0", optional=true }

openbb-charting = { path = "./extensions/charting", optional = true }
openbb-futures = { path = "./extensions/futures", optional = true }
openbb-qa = { path = "./extensions/qa", optional = true }
openbb-ta = { path = "./extensions/ta", optional = true }
openbb-econometrics = { path = "./extensions/econometrics", optional = true }

[tool.poetry.extras]
alpha_vantage = ["openbb-alpha-vantage"]
cboe = ["openbb-cboe"]
quandl = ["openbb-quandl"]
yfinance = ["openbb-yfinance"]
charting = ["openbb-charting"]
futures = ["openbb-futures"]
qa = ["openbb-qa"]
ta = ["openbb-ta"]
econometrics = ["openbb-econometrics"]

all = [
    "openbb-alpha-vantage",
    "openbb-cboe",
    "openbb-quandl",
    "openbb-yfinance",
    "openbb-charting",
    "openbb-futures",
    "openbb-qa",
    "openbb-ta",
    "openbb-econometrics"
]

[tool.poetry.group.dev.dependencies]
pytest = "^6.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
