[tool.poetry]
name = "openbb"
version = "4.0.0a2"
description = "OpenBB"
authors = ["OpenBB Team <hello@openbb.co>"]
readme = "README.md"
packages = [{ include = "openbb" }]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
openbb-core = "^0.1.0a2"

openbb-benzinga = "^0.1.0a2"
openbb-fmp = "^0.1.0a2"
openbb-fred = "^0.1.0a2"
openbb-intrinio = "^0.1.0a2"
openbb-polygon = "^0.1.0a2"

openbb-crypto = "^0.1.0a2"
openbb-economy = "^0.1.0a2"
openbb-forex = "^0.1.0a2"
openbb-fixedincome = "^0.1.0a2"
openbb-news = "^0.1.0a2"
openbb-stocks = "^0.1.0a2"

# Community dependencies
openbb-alpha-vantage = { version = "^0.1.0a2", optional = true }
openbb-cboe = { version = "^0.1.0a2", optional = true }
openbb-quandl = { version = "^0.1.0a2", optional = true }
openbb-yfinance = { version = "^0.1.0a2", optional = true }

openbb-charting = { version = "^0.1.0a2", optional = true }
openbb-futures = { version = "^0.1.0a2", optional = true }
openbb-qa = { version = "^0.1.0a2", optional = true }
openbb-ta = { version = "^0.1.0a2", optional = true }
openbb-econometrics = { version = "^0.1.0a2", optional = true }

[tool.poetry.extras]
alpha_vantage = ["openbb-alpha-vantage"]
cboe = ["openbb-cboe"]
quandl = ["openbb-quandl"]
yfinance = ["openbb-yfinance"]
charting = ["openbb-charting"]
futures = ["openbb-futures"]
qa = ["openbb-qa"]
ta = ["openbb-ta"]
econometrics = ["openbb-econometrics"]

all = [
    "openbb-alpha-vantage",
    "openbb-cboe",
    "openbb-quandl",
    "openbb-yfinance",
    "openbb-charting",
    "openbb-futures",
    "openbb-qa",
    "openbb-ta",
    "openbb-econometrics",
]

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
pytest-subtests = "^0.11.0"
pytest-recorder = "^0.2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
