[tool.poetry]
name = "openbb_qa"
version = "0.1.0"
description = "Quantitative Analysis for OpenBB"
authors = ["OpenBB Team <hello@openbb.co>"]
readme = "README.md"
packages = [{ include = "openbb_qa" }]

[tool.poetry.dependencies]
python = "^3.9"
scipy = "^1.10.1"
statsmodels = "^0.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."openbb_sdk_core_extension"]
qa = "openbb_qa.qa_router:router"
