[tool.poetry]
name = "openbb-sdk-core"
version = "0.2.0"
description = ""
authors = [
    "Chavithra PARANA <chavithra@gmail.com>",
    "Igor Radovanovic <igorradovanovic20@gmail.com>"
]
readme = "README.md"
packages = [{ include = "openbb_sdk_core" }, { include = "builtin_extensions" }]

[tool.poetry.dependencies]
python = "^3.9"
uvicorn = "^0.20.0"
websockets = "^10.4"
pandas = "^1.5.3"
requests = "^2.28.2"
html5lib = "^1.1"
openbb-provider = "^0.1.0"
fastapi = "^0.95.2"
passlib = "^1.7.4"
python-jose = "^3.3.0"
uuid7 = "^0.1.0"
pymongo = "^4.3.3"
posthog = "^3.0.1"
python-multipart = "^0.0.6"
bcrypt = "^4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."openbb_sdk_core_extension"]
crypto = "builtin_extensions.crypto.crypto_router:router"
economy = "builtin_extensions.economy.economy_router:router"
fixedincome = "builtin_extensions.fixedincome.fixedincome_router:router"
forex = "builtin_extensions.forex.forex_router:router"
news = "builtin_extensions.news.news_router:router"
providers = "openbb_provider_plugin.router.openbb_provider_router:router"
stocks = "builtin_extensions.stocks.stocks_router:router"
