[tool.poetry]
name = "openbb-commodity"
version = "1.3.0"
description = "Commodity extension for OpenBB"
authors = ["OpenBB Team <hello@openbb.co>"]
license = "AGPL-3.0-only"
readme = "README.md"
packages = [{ include = "openbb_commodity" }]

[tool.poetry.dependencies]
python = "^3.9"
openbb-core = "^1.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."openbb_core_extension"]
commodity = "openbb_commodity.commodity_router:router"
