[tool.poetry]
name = "openbb-crypto"
version = "1.3.2"
description = "Crypto extension for OpenBB"
authors = ["OpenBB Team <hello@openbb.co>"]
license = "AGPL-3.0-only"
readme = "README.md"
packages = [{ include = "openbb_crypto" }]

[tool.poetry.dependencies]
python = "^3.9"
openbb-core = "^1.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."openbb_core_extension"]
crypto = "openbb_crypto.crypto_router:router"

[tool.poetry.plugins."openbb_charting_extension"]
crypto = "openbb_crypto.crypto_views:CryptoViews"
