[tool.poetry]
name = "openbb-currency"
version = "1.0.0"
description = "Currency extension for OpenBB"
authors = ["OpenBB Team <hello@openbb.co>"]
readme = "README.md"
packages = [{ include = "openbb_currency" }]

[tool.poetry.dependencies]
python = "^3.8"
openbb-core = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."openbb_core_extension"]
currency = "openbb_currency.currency_router:router"
